arrumado cores dos botoes

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,6 +4,10 @@
   padding: 2rem;
   text-align: center;
 }
+#pink {
+  background-color: #ff69b4; /* Rosa vibrante */
+}
+
 
 .logo {
   height: 6em;
